# tg-inviter-pro

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: ioc.py  main.py
app/core/: config.py  models.py  setup.py
app/services/: csv_reader.py  inviter.py  runner.py  session_converter.py
app/web/: core.py  router.py  routes.py
app/web/handlers/: accounts.py  dashboard.py  targets.py
app/web/templates/: accounts.html  base.html  dashboard.html
app/web/templates/partials/: account_rows.html  settings_form.html  target_stats.html
